# glsl-preprocessor-validator

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
src/: main.cpp
test/: CMakeLists.txt
